--- a/MarketingManager/MarketingManager/MarketingManager.UWP/MarketingManager.UWP.csproj
+++ b/MarketingManager/MarketingManager/MarketingManager.UWP/MarketingManager.UWP.csproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Add.png" />
+    <Content Include="Assets\ebird small logo.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-125.png" />
     <Content Include="Assets\LargeTile.scale-150.png" />
