--- a/MarketingManager/MarketingManager/MarketingManager.UWP/MarketingManager.UWP.csproj
+++ b/MarketingManager/MarketingManager/MarketingManager.UWP/MarketingManager.UWP.csproj
@@ -175,6 +175,10 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Data\Data.csproj">
+      <Project>{D444864E-1629-4109-A77D-07D7ACDB56A6}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MarketingManager\MarketingManager.csproj">
       <Project>{c1788eec-5648-4d58-bee4-ec80d65c7608}</Project>
       <Name>MarketingManager</Name>
