--- a/MarketingManager/MarketingManager/MarketingManager/MarketingManager.csproj
+++ b/MarketingManager/MarketingManager/MarketingManager/MarketingManager.csproj
@@ -12,4 +12,8 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\Data.csproj" />
+  </ItemGroup>
 </Project>
